# parbm-detector

./: .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt
.claude/: launch.json
docs/: index.html  tool.html
parbm_detector_pkg/: __init__.py  cli.py  detector.py  enrichment.py  html_report.py  input_handler.py
tests/: test_detector.py
