[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parylation-predictor"
version = "3.1.0"
description = "ParylationPredictor – predict PARylation sites and detect PAR-binding domains in proteins"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dr. Ali Hashemi Gheinani", email = "ali.hashemi@unibe.ch"},
]
keywords = ["PAR-binding", "PARylation", "ADP-ribosylation", "protein", "bioinformatics", "proteomics", "PARP"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests>=2.28.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=22.0", "flake8>=4.0"]

[project.urls]
Homepage = "https://gheinani.github.io/parbm-detector"
Repository = "https://github.com/gheinani/parbm-detector"
"Bug Tracker" = "https://github.com/gheinani/parbm-detector/issues"

[project.scripts]
parylation-predictor = "parbm_detector_pkg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
